--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "generate-api": "npx openapi-typescript http://localhost:3000/api-json --output src/app/shared/generated/interface.d.ts"
   },
   "prettier": {
     "printWidth": 100,
@@ -29,8 +30,11 @@
     "@angular/forms": "^21.1.0",
     "@angular/platform-browser": "^21.1.0",
     "@angular/router": "^21.1.0",
+    "@primeuix/themes": "^2.0.2",
     "@tailwindcss/postcss": "^4.1.18",
     "postcss": "^8.5.6",
+    "primeicons": "^7.0.0",
+    "primeng": "^21.0.4",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.18",
     "tslib": "^2.3.0"
@@ -40,6 +44,7 @@
     "@angular/cli": "^21.1.0",
     "@angular/compiler-cli": "^21.1.0",
     "jsdom": "^27.1.0",
+    "ng-openapi-gen": "^1.0.5",
     "typescript": "~5.9.2",
     "vitest": "^4.0.8"
   }
