--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/router": "^21.1.0",
     "@primeuix/themes": "^2.0.2",
     "@tailwindcss/postcss": "^4.1.18",
+    "jwt-decode": "^4.0.0",
     "postcss": "^8.5.6",
     "primeicons": "^7.0.0",
     "primeng": "^21.0.4",
